--- a/Module_3_HTML/Portfolio/index.html
+++ b/Module_3_HTML/Portfolio/index.html
@@ -8,8 +8,8 @@
     <body>
         <div class="title">
             <img src="images/Ophanim_by_Francis_Coulombe.png" width="200px">
-            <h1 style="text-align:center">The Ophanim</h1>
-            <h2 style="text-align:center">Journey into Coding</h2>
+            <h1>The Ophanim</h1>
+            <h2>Journey into Coding</h2>
         </div>
 
         <div class="nav">
@@ -21,31 +21,73 @@
 
 
         <div class="profile-pic">
-            <img src="images/My_Profile_Pic.jpg" width="200">
+            <img src="images/My_Profile_Pic.jpg" width="300px">
         </div>
 
         <div class="social-media">
-
+            <ul>
+                <li><a href="https://www.linkedin.com/in/angelbienvenidofernandez/" target="_blank"><img src="images/Linkedin_Logo.png" width="50px"></a></li>
+                <li><a href="https://github.com/Avixph" target="_blank"><img src="images/Github_Logo.png" width="50px"></a></li>
+            </ul>
         </div>
 
+        <hr>
+
         <div class="about-me-text">
+
             <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolorum nulla accusantium perferendis quam explicabo odit quisquam ea natus? Saepe ducimus, minima error alias dolorum consectetur officia architecto voluptatem iure sunt eveniet nam, recusandae explicabo, itaque vel autem. Accusamus suscipit sit labore sed blanditiis a est rem harum expedita veritatis numquam voluptatibus dolore voluptatum sunt repellendus explicabo, excepturi beatae perferendis. Numquam dicta quis ipsum explicabo suscipit alias placeat, ea, vero minus ducimus voluptatibus iste repellendus deleniti? Eos, quas! Voluptatem tempora explicabo, corrupti dolor hic iure quo, ipsum voluptates quaerat omnis accusamus et vel, necessitatibus doloribus optio. Odio nobis ad molestias.</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio qui consequuntur aut. Nobis debitis ipsum soluta sit itaque officiis impedit maiores suscipit magni id harum consequuntur quas delectus culpa, saepe nostrum, autem ullam! Assumenda molestiae reprehenderit sunt ducimus id saepe porro vitae asperiores eum accusantium? Illum aliquid excepturi magni quos.</p>
+            <p>Hi my name is Angel B. Fernandez, I’m Digital Marketing professional currently on a journey into coding and web development.</p>
+            <p>Before taking on this journey, I've held many roles from PR Assistant to working on digital campaigns as a Display Associate. 
+                Most recently served as a Digital Marketing Captain at COOP, leading a group of recent grads through coaching, training, and encouragement as they transition into careers in Digital Marketing.</p>
+            <p>In my freetime I like to keep up with many subject matters, anything health/wellness to tech related. 
+                Particularly I like all things in the realms of skincare/haircare, plus everything that comes with it like diet/exercise. 
+                Though recently due to some current events it's been tough to keep up. As for tech, I especially like to keep up with the mobile side of things, even if inaccessible to me it's fun to keep up.</p>
+
         </div>
 
         <hr>
 
         <div class="goals">
             <h2>My Goals</h2>
-
+            <p>My cuurent goals on my coding journey are getting accepted into TKH's Innovation Fellowship progaming and learn all things web develpment. 
+                With the knowledge gained I plan to further develop my coding skils by getting a few portfolio projects under my belt. 
+                Once comfortable with my web development knowledge and skills, I will pursue either a Full-Stack, Front-End, or any developer role that fits me at the moment preferably at mid-small size company.</p>
         </div>
 
         <hr>
 
         <div class="skills">
             <h2>My Skills</h2>
+            <ul>
+                <li>HTML&CSS &lt;<span>Work in Progress</span>&gt;</li>
+                <li>JS
+                    <ul>
+                        <li>React.js &lt;<span>Work in Progress</span>&gt;</li>
+                        <li>Node.js &lt;<span>Work in Progress</span>&gt;</li>
+                    </ul>
+                </li>
+                <li>SQL</li>
+                <li>Tableau</li>
+                <li>Prisma</li>
+                <li>Microsoft Office Suite</li>
+                <li>G Suite</li>
+                <li>Campaign Management</li>
+                <li>Client/Vendor Management</li>
+                <li>Team Management</li>
+                <li>Event Planning</li>
+                <li>Teamwork</li>
+                <li>Interpersonal/Intrapersonal Skills</li>
+                <li>Public Relations</li>
+                <li>Search Marketing
+                    <ul>
+                        <li>SEO</li>
+                        <li>SEM</li>
+                    </ul>
+                </li>
+                <li>Display Marketing</li>
+                <li>Data Analytics</li>
 
+            </ul>
         </div>
 
 
@@ -54,10 +96,32 @@
         <div class="projects">
             <h2>My Projects</h2>
             <div class="projects">
-                <a href="index.html">The Ophanim: Journey into Coding</a>
-                <img>
+                <a href="index.html">The Ophanim - Journey into Coding</a>
+                <img src="images/Portfolio_Screenshot.png" width="100px">
+                <p>This is my portfolio site.</p>
             </div>
+        </div>
 
+        <hr>
+
+        <div class="contact-form">
+            <h2>Contact Me!</h2>
+            <form class="contact">
+                <label for="name">Name</label><br>
+                <input type="text" name="name"><br>
+                <label for="email">Email</label><br>
+                <input type="text" name="email"><br>
+                <label for="message">Your Message</Menu></label><br>
+                <input type="text" name="message"><br>
+                <input type="submit" name="Contact">
+            </form>
+        </div>
+
+        <hr><hr>
+
+        <div class="footer">
+            <p>Copyright © 2020 The Ophanim</p>
+            <p>Ophanim image by Francis Coulombe</p>
         </div>
 
     </body>
