pushing to module 6 branch

--- a/Module_6_Programming2/projects/the_weather/index.html
+++ b/Module_6_Programming2/projects/the_weather/index.html
@@ -28,23 +28,23 @@
 
         <section class="location">
 
-            <div class="city">New York, NY</div>
+            <div class="city"> - - </div>
 
         </section>
 
         <div class="current">
 
-            <div class="weather">Cloudy</div>
+            <div class="weather"> - </div>
             
-            <div class="temperature">70<span>°F</span></div>
+            <div class="temperature"> - <span> - </span></div>
 
-            <div class="high-low">70<span>°F</span> / 64<span>°F</span></div>
+            <div class="high-low"> - <span> - </span> / - <span> - </span></div>
 
         </div>
 
         <section class="date">
 
-            <div class="day">Sunday, August 16, 2020 </div>
+            <div class="day"> - - - </div>
 
         </section>
 
