--- a/Module_6_Programming2/projects/the_calculator/index.html
+++ b/Module_6_Programming2/projects/the_calculator/index.html
@@ -8,7 +8,7 @@
    
     <meta http-equiv="x-UA-Compatible" content="ie-edge">
     
-    <title>The Calc</title>
+    <title>Nue Calc</title>
 
     <link href="https://fonts.googleapis.com/css?family=Fira+Mono&display=swap" rel="stylesheet">
 
