--- a/Module_6_Programming2/projects/things_to-do_app/index.html
+++ b/Module_6_Programming2/projects/things_to-do_app/index.html
@@ -8,7 +8,7 @@
    
     <meta http-equiv="x-UA-Compatible" content="ie-edge">
 
-    <title>My To-Do List</title>
+    <title>Things To-Do..</title>
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" rel="stylesheet" />
     
